fix some layout issues

--- a/src/components/organisms/carousel/Carousel.scss
+++ b/src/components/organisms/carousel/Carousel.scss
@@ -1,10 +1,10 @@
 @import "src/scss/variables";
 
 .carousel-container {
-  width: 1380px;
-  height: 480px;
-  position: absolute;
-  top: 30px;
+  margin-top: 30px;
+  width: 100%;
+  height: 600px;
+  position: relative;
   display: flex;
   flex-direction: row;
   border-radius: 10px;
