--- a/src/components/organisms/product-container/ProductContainer.scss
+++ b/src/components/organisms/product-container/ProductContainer.scss
@@ -3,8 +3,6 @@
 .product-container {
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,6 +35,7 @@
         line-height: 17px;
         background: $gray-light;
       }
+
       button.active {
         border: 1px solid $purple;
       }
@@ -46,8 +45,8 @@
   .product-body {
     width: 100%;
     height: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
   }
 }
