--- a/src/components/pages/homepage/Homepage.scss
+++ b/src/components/pages/homepage/Homepage.scss
@@ -3,7 +3,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 100px;
   align-items: center;
   position: relative;
 }
