--- a/src/components/templates/header/Header.scss
+++ b/src/components/templates/header/Header.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   background-color: #FFFFFF;
-
+  z-index: 1000;
 
   .header-body {
     grid-area: content;
